# Sentinel_NDWI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  simple_config.py  simple_main.py  stac_downloader.py
notebooks/: Simple_NDWI_Analysis.ipynb
